# NOTE:
# 1. for display continuity sake please use 2 spaces instead of tabs
# 2. make sure that lines break at 80 chars for constricted display situations
#<-------------------------------- 80 chars ---------------------------------->#

2015-12-24 bertazza
  * Fixed broken 4663 commit

2015-12-23 bertazza
  * Info feature tool: added a pane to show WMS info.

<----------------------------------------------- Changes.txt updated 'til here
2015-12-21 bertazza
  * Raster Styler: updated Italian and Spanish language files (thanks to Peppe)
  * Raster Styler: added check to ensure a valid number of classes has been
    selected.

2015-12-20 ede
  * add support for spatial datastore layers to EditDataStoreQueryPlugIn
    allows finetuning the SQL query created with Open->Data Store Layer
  PLUS
  * add explicit mysql datastore for mysql jdbc
  * add MariaDB jdbc to lib/plus/dbdatastore/
  * updated to sqlite-jdbc-3.8.11.2.jar
  * updated to mysql-connector-java-5.1.38-bin.jar
  * moved db datastore jars to lib/plus/dbdatastore/

2015-12-19 mmichaud <m.michael.michaud@orange.fr>
  * Add support to H2GIS spatial database

2015-12-18 bertazza
  * Raster symbologies now saved in and restored from project file

2015-12-15 ede
  * added icons to the datastore query chooser's combobox
  * "static"alized a part of ConnectionManagerPanel w/o redesign consequences

2015-12-11 ede
  * move WFS language files to language/wfs/
  * added I18N support for giving a plain path as "category"

2015-12-11 Nicolas Ribot <nicolas.ribot@gmail.com>
  * Spatial Databases support enhanced: support for Oracle Spatial, 
    MySQL/MariaDB, Spatialite added.
  * FilterQuery and Adhoc queries supported for these databases
  * Error detection in case of bad WHERE clause detected when loading a layer
    (layer removed from Panel)
  * New connection icons according to database type
  * Oracle Spatial: reads SDO_GEOMETRY with geotools code